# FinalWhistle

./: .env.example  .gitignore  .railwayignore  .vercelignore  Anchor.toml  Cargo.toml  README.md  TECHNICAL-DOCUMENTATION.md  TXLINE-TECHNICAL-DOCUMENTATION.md  brand.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: production-checks.yml
.superstack/: build-context.md
apps/web/: next.config.ts  package.json  tsconfig.json
apps/web/scripts/: devnet-sol-smoke.ts  initialize-program-config.ts  migrate-database.ts  reconcile-onchain.ts  txline-activate.ts  txline-smoke.ts
apps/web/src/: middleware.ts
apps/web/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx  providers.tsx
apps/web/src/client/: finalwhistle.ts
apps/web/src/components/: app-wallet.tsx  beta-client.tsx  country-flag.tsx  home-match-board.tsx  live-fixture-board.tsx  match-night-hero.tsx  nb.tsx  score-ticker.tsx  site-footer.tsx
apps/web/src/lib/: legal.ts  market-timing.ts  (+1 more)
apps/web/test/: auth.test.ts  beta-api.test.ts  client-instructions.test.ts  country-flag.test.ts  domain.test.ts  market-timing.test.ts  middleware.test.ts  production-readiness.test.ts  settlement.test.ts  solana-decode.test.ts  txline.test.ts  write-atomicity.test.ts
backend/: README.md  package.json
backend/src/: auth.ts  config.ts  db.ts  domain.ts  proof.ts  server.ts  settlement.ts  solana.ts  txline.ts
backend/test/: settlement.test.ts
programs/final_whistle/: Cargo.toml
programs/final_whistle/src/: lib.rs
scripts/: release-check.mjs
(+36 files in other folders)
