[package]
name = "final_whistle"
version = "0.1.0"
description = "Proof-settled World Cup challenge markets"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "final_whistle"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.0"
anchor-spl = "0.31.0"
